--- a/Template_test_alex.yaml
+++ b/Template_test_alex.yaml
@@ -1,7 +1,7 @@
 ---
 project: CMP_SEs
 kind: PIPELINE
-name: ${input.Pipeline_Name}
+name: pipeline Template
 icon: organization,left, is-teal
 enabled: false
 concurrency: 10
