--- a/Template_test_alex.yaml
+++ b/Template_test_alex.yaml
@@ -1,7 +1,7 @@
 ---
 project: CMP_SEs
 kind: PIPELINE
-name: Template_name
+name: ${New_Pipeline_Name}
 icon: organization,left, is-teal
 enabled: true
 concurrency: 10
